add classifiers fiesta !

--- a/pw3/pw3.ipynb
+++ b/pw3/pw3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "fba7dc16-489f-4a3e-9cec-ab1b054719f5",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "c15c68ac-1058-4078-9769-36ce96146bf9",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "557d932b-bbce-4349-878b-bdab98b14f3f",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "b33adcf6-8d0a-4d06-b582-6fb4b8d85d21",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "6b2ef285-d03e-4d40-9046-91d46318c3b4",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "52a99c6a-dc56-4750-8c84-4a316069ce29",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "321df34f-f8c4-4c97-bc47-8fa98c5c3533",
    "metadata": {},
    "outputs": [],
@@ -173,244 +173,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "d0908574-9a38-42e8-aab5-d681b758b447",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>REGULAR</th>\n",
-       "      <th>RETRO</th>\n",
-       "      <th>OTHER</th>\n",
-       "      <th>OVERTIME</th>\n",
-       "      <th>INJURED</th>\n",
-       "      <th>DETAIL</th>\n",
-       "      <th>QUINN_EDUCATION_INCENTIVE</th>\n",
-       "      <th>TOTAL_GROSS</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>69772.10</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>212739.48</td>\n",
-       "      <td>82300.87</td>\n",
-       "      <td>30939.24</td>\n",
-       "      <td>12144.0</td>\n",
-       "      <td>25178.06</td>\n",
-       "      <td>433073.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>100963.38</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>211900.28</td>\n",
-       "      <td>67849.66</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9016.0</td>\n",
-       "      <td>10096.55</td>\n",
-       "      <td>399825.87</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>109858.02</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>192097.54</td>\n",
-       "      <td>75938.65</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>19550.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>397444.21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>127626.76</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>124524.50</td>\n",
-       "      <td>66433.83</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>50085.0</td>\n",
-       "      <td>12762.78</td>\n",
-       "      <td>381432.87</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>142466.41</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>15820.50</td>\n",
-       "      <td>167509.61</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>24695.0</td>\n",
-       "      <td>28198.49</td>\n",
-       "      <td>378690.01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22541</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>69.86</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>69.86</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22542</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>59.78</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>59.78</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22543</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>56.62</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>56.62</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22544</th>\n",
-       "      <td>54.00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>54.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22545</th>\n",
-       "      <td>1.00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>25.00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>26.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>22544 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         REGULAR  RETRO      OTHER   OVERTIME   INJURED   DETAIL  \\\n",
-       "2       69772.10    NaN  212739.48   82300.87  30939.24  12144.0   \n",
-       "3      100963.38    NaN  211900.28   67849.66       NaN   9016.0   \n",
-       "4      109858.02    NaN  192097.54   75938.65       NaN  19550.0   \n",
-       "5      127626.76    NaN  124524.50   66433.83       NaN  50085.0   \n",
-       "6      142466.41    NaN   15820.50  167509.61       NaN  24695.0   \n",
-       "...          ...    ...        ...        ...       ...      ...   \n",
-       "22541        NaN  69.86        NaN        NaN       NaN      NaN   \n",
-       "22542        NaN    NaN        NaN      59.78       NaN      NaN   \n",
-       "22543        NaN    NaN      56.62        NaN       NaN      NaN   \n",
-       "22544      54.00    NaN        NaN        NaN       NaN      NaN   \n",
-       "22545       1.00    NaN      25.00        NaN       NaN      NaN   \n",
-       "\n",
-       "       QUINN_EDUCATION_INCENTIVE  TOTAL_GROSS  \n",
-       "2                       25178.06    433073.75  \n",
-       "3                       10096.55    399825.87  \n",
-       "4                            NaN    397444.21  \n",
-       "5                       12762.78    381432.87  \n",
-       "6                       28198.49    378690.01  \n",
-       "...                          ...          ...  \n",
-       "22541                        NaN        69.86  \n",
-       "22542                        NaN        59.78  \n",
-       "22543                        NaN        56.62  \n",
-       "22544                        NaN        54.00  \n",
-       "22545                        NaN        26.00  \n",
-       "\n",
-       "[22544 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "col = ['REGULAR', 'RETRO', 'OTHER', 'OVERTIME', 'INJURED', 'DETAIL', 'QUINN_EDUCATION_INCENTIVE', 'TOTAL_GROSS']\n",
+    "tar = df['DEPARTMENT_NAME']\n",
     "df = df[col]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "657992e4-639f-49b4-9b3f-73ac0c1e0363",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "IterativeImputer is experimental and the API might change without any deprecation cycle. To use it, you need to explicitly import enable_iterative_imputer:\nfrom sklearn.experimental import enable_iterative_imputer",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m----------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[26], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mimpute\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SimpleImputer, KNNImputer, IterativeImputer\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mneighbors\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m KNeighborsClassifier\n",
-      "File \u001b[1;32m~\\miniconda3\\envs\\PCD\\Lib\\site-packages\\sklearn\\impute\\__init__.py:18\u001b[0m, in \u001b[0;36m__getattr__\u001b[1;34m(name)\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getattr__\u001b[39m(name):\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIterativeImputer\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m---> 18\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(\n\u001b[0;32m     19\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is experimental and the API might change without any \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     20\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdeprecation cycle. To use it, you need to explicitly import \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     21\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124menable_iterative_imputer:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     22\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfrom sklearn.experimental import enable_iterative_imputer\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     23\u001b[0m         )\n\u001b[0;32m     24\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodule \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m has no attribute \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mImportError\u001b[0m: IterativeImputer is experimental and the API might change without any deprecation cycle. To use it, you need to explicitly import enable_iterative_imputer:\nfrom sklearn.experimental import enable_iterative_imputer"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Imputer: Zero\n",
+      "Classifier: KNN, F1-score: 0.23148558758314855\n",
+      "Classifier: DecisionTree, F1-score: 0.2541019955654102\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.impute import SimpleImputer, KNNImputer, IterativeImputer\n",
+    "# test des classificteurs\n",
+    "\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.impute import SimpleImputer, KNNImputer\n",
+    "from sklearn.experimental import enable_iterative_imputer\n",
+    "from sklearn.impute import IterativeImputer\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
     "\n",
+    "# Diviser les données en ensembles d'entraînement et de test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(df, tar, test_size=0.1, random_state=42)\n",
     "\n",
+    "# Imputation des valeurs manquantes\n",
+    "imputers = {\n",
+    "    \"Zero\": SimpleImputer(strategy=\"constant\", fill_value=0),\n",
+    "    \"Median\": SimpleImputer(strategy=\"median\"),\n",
+    "    \"KNN\": KNNImputer(),\n",
+    "    \"Iterative\": IterativeImputer()\n",
+    "}\n",
     "\n",
+    "imputed_data_train = {}\n",
+    "imputed_data_test = {}\n",
     "\n",
+    "for imputer_name, imputer in imputers.items():\n",
+    "    # Imputer sur les données d'entraînement\n",
+    "    X_train_imputed = pd.DataFrame(imputer.fit_transform(X_train), columns=X_train.columns)\n",
+    "    imputed_data_train[imputer_name] = X_train_imputed\n",
+    "    \n",
+    "    # Imputer sur les données de test\n",
+    "    X_test_imputed = pd.DataFrame(imputer.transform(X_test), columns=X_test.columns)\n",
+    "    imputed_data_test[imputer_name] = X_test_imputed\n",
     "\n",
+    "# Définir les classifieurs\n",
+    "classifiers = {\n",
+    "    \"KNN\": KNeighborsClassifier(),\n",
+    "    \"DecisionTree\": DecisionTreeClassifier(),\n",
+    "    \"RandomForest\": RandomForestClassifier()\n",
+    "}\n",
     "\n",
-    "\n",
-    "\n"
+    "# Évaluation des performances des classifieurs avec chaque méthode d'imputation\n",
+    "for imputer_name in imputers.keys():\n",
+    "    print(f\"Imputer: {imputer_name}\")\n",
+    "    \n",
+    "    for clf_name, clf in classifiers.items():\n",
+    "        # Entraînement du classifieur sur les données d'entraînement imputées\n",
+    "        clf.fit(imputed_data_train[imputer_name], y_train)\n",
+    "        \n",
+    "        # Prédiction sur les données de test imputées\n",
+    "        y_pred = clf.predict(imputed_data_test[imputer_name])\n",
+    "        \n",
+    "        # Calcul du F1-score sur les données de test\n",
+    "        f1 = f1_score(y_test, y_pred, average='micro')\n",
+    "        \n",
+    "        print(f\"Classifier: {clf_name}, F1-score: {f1}\")"
    ]
   },
   {
