--- a/pw3/pw3.ipynb
+++ b/pw3/pw3.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "657992e4-639f-49b4-9b3f-73ac0c1e0363",
    "metadata": {},
    "outputs": [
@@ -204,23 +204,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Imputer: Zero\n",
-      "Classifier: KNN         , F1 (micro): 0.23148558758314855, F1 (macro): 0.049655226915264875, accuracy: 0.23148558758314855\n",
-      "Classifier: DecisionTree, F1 (micro): 0.25853658536585367, F1 (macro): 0.0611586795797817, accuracy: 0.25853658536585367\n",
-      "Classifier: RandomForest, F1 (micro): 0.2798226164079823, F1 (macro): 0.07186332631086077, accuracy: 0.2798226164079823\n",
-      "Imputer: Median\n",
-      "Classifier: KNN         , F1 (micro): 0.23414634146341465, F1 (macro): 0.050527710957304524, accuracy: 0.23414634146341465\n",
-      "Classifier: DecisionTree, F1 (micro): 0.26430155210643014, F1 (macro): 0.06768649551191275, accuracy: 0.26430155210643014\n",
-      "Classifier: RandomForest, F1 (micro): 0.2824833702882483, F1 (macro): 0.07182971817601619, accuracy: 0.2824833702882483\n",
-      "Imputer: KNN\n",
-      "Classifier: KNN         , F1 (micro): 0.2279379157427938, F1 (macro): 0.05102738511712924, accuracy: 0.2279379157427938\n",
-      "Classifier: DecisionTree, F1 (micro): 0.23725055432372505, F1 (macro): 0.05917883450249012, accuracy: 0.23725055432372505\n",
-      "Classifier: RandomForest, F1 (micro): 0.2638580931263858, F1 (macro): 0.06522942307778785, accuracy: 0.2638580931263858\n",
-      "Imputer: Iterative\n",
-      "Classifier: KNN         , F1 (micro): 0.23813747228381374, F1 (macro): 0.05140780460576693, accuracy: 0.23813747228381374\n",
-      "Classifier: DecisionTree, F1 (micro): 0.25764966740576495, F1 (macro): 0.06942722326722561, accuracy: 0.25764966740576495\n",
-      "Classifier: RandomForest, F1 (micro): 0.2665188470066519, F1 (macro): 0.06326281920319422, accuracy: 0.2665188470066519\n",
-      "Dummy Classifier Accuracy: 0.13880266075388026, f1 micro: 0.13880266075388026, f1 macro: 0.0012437217877805328\n"
+      "Imputer: Zero\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Unknown format code 'f' for object of type 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[39], line 54\u001b[0m\n\u001b[0;32m     51\u001b[0m         f1_macro \u001b[38;5;241m=\u001b[39m f1_score(y_test, y_pred, average\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmacro\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     52\u001b[0m         accu \u001b[38;5;241m=\u001b[39m accuracy_score(y_test, y_pred)\n\u001b[1;32m---> 54\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mClassifier: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mclf_name\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.3f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, F1 (micro): \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mf1_micro\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.3f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, F1 (macro): \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mf1_macro\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.3f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, accuracy: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00maccu\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.3f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     59\u001b[0m dummy_clf \u001b[38;5;241m=\u001b[39m DummyClassifier(strategy\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmost_frequent\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     60\u001b[0m dummy_clf\u001b[38;5;241m.\u001b[39mfit(X_train, y_train)\n",
+      "\u001b[1;31mValueError\u001b[0m: Unknown format code 'f' for object of type 'str'"
      ]
     }
    ],
@@ -278,7 +273,7 @@
     "        f1_macro = f1_score(y_test, y_pred, average='macro')\n",
     "        accu = accuracy_score(y_test, y_pred)\n",
     "        \n",
-    "        print(f\"Classifier: {clf_name}, F1 (micro): {f1_micro}, F1 (macro): {f1_macro}, accuracy: {accu}\")\n",
+    "        print(f\"Classifier: {clf_name:.3f}, F1 (micro): {f1_micro:.3f}, F1 (macro): {f1_macro:.3f}, accuracy: {accu:.3f}\")\n",
     "\n",
     "\n",
     "\n",
@@ -290,8 +285,7 @@
     "accu_dummy = accuracy_score(y_test, y_pred_dummy)\n",
     "f1_dummy_mi = f1_score(y_test, y_pred_dummy, average='micro')\n",
     "f1_dummy_ma = f1_score(y_test, y_pred_dummy, average='macro')\n",
-    "\n",
-    "print(f\"Dummy time -> f1 micro: {f1_dummy_mi}, f1 macro: {f1_dummy_ma}, accuracy: {accu_dummy}\")"
+    "print(f\"Dummy time -> f1 micro: {f1_dummy_mi:.3f}, f1 macro: {f1_dummy_ma:.3f}, accuracy: {accu_dummy:.3f}\")\n"
    ]
   },
   {
