--- a/pw3/pw3.ipynb
+++ b/pw3/pw3.ipynb
@@ -78,7 +78,10 @@
     }
    ],
    "source": [
+    "#\n",
+    "# Q2 voici la taille du dataframe:\n",
     "print(df.shape)\n",
+    "# Q2 voici les valeurs manquantes selon les colonnes:\n",
     "list = compute_missing_values(data_set)\n",
     "print(\"missing values\")\n",
     "for i in list:\n",
@@ -196,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "657992e4-639f-49b4-9b3f-73ac0c1e0363",
    "metadata": {},
    "outputs": [
@@ -204,18 +207,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Imputer: Zero\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Unknown format code 'f' for object of type 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[39], line 54\u001b[0m\n\u001b[0;32m     51\u001b[0m         f1_macro \u001b[38;5;241m=\u001b[39m f1_score(y_test, y_pred, average\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmacro\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     52\u001b[0m         accu \u001b[38;5;241m=\u001b[39m accuracy_score(y_test, y_pred)\n\u001b[1;32m---> 54\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mClassifier: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mclf_name\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.3f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, F1 (micro): \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mf1_micro\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.3f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, F1 (macro): \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mf1_macro\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.3f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, accuracy: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00maccu\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.3f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     59\u001b[0m dummy_clf \u001b[38;5;241m=\u001b[39m DummyClassifier(strategy\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmost_frequent\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     60\u001b[0m dummy_clf\u001b[38;5;241m.\u001b[39mfit(X_train, y_train)\n",
-      "\u001b[1;31mValueError\u001b[0m: Unknown format code 'f' for object of type 'str'"
+      "Imputer: Zero\n",
+      "Classifier: KNN         , F1 (micro): 0.231, F1 (macro): 0.050, accuracy: 0.231\n",
+      "Classifier: DecisionTree, F1 (micro): 0.258, F1 (macro): 0.062, accuracy: 0.258\n",
+      "Classifier: RandomForest, F1 (micro): 0.278, F1 (macro): 0.073, accuracy: 0.278\n",
+      "Imputer: Median\n",
+      "Classifier: KNN         , F1 (micro): 0.234, F1 (macro): 0.051, accuracy: 0.234\n",
+      "Classifier: DecisionTree, F1 (micro): 0.263, F1 (macro): 0.066, accuracy: 0.263\n",
+      "Classifier: RandomForest, F1 (micro): 0.279, F1 (macro): 0.074, accuracy: 0.279\n",
+      "Imputer: KNN\n",
+      "Classifier: KNN         , F1 (micro): 0.228, F1 (macro): 0.051, accuracy: 0.228\n",
+      "Classifier: DecisionTree, F1 (micro): 0.241, F1 (macro): 0.060, accuracy: 0.241\n",
+      "Classifier: RandomForest, F1 (micro): 0.267, F1 (macro): 0.064, accuracy: 0.267\n",
+      "Imputer: Iterative\n",
+      "Classifier: KNN         , F1 (micro): 0.238, F1 (macro): 0.051, accuracy: 0.238\n",
+      "Classifier: DecisionTree, F1 (micro): 0.255, F1 (macro): 0.072, accuracy: 0.255\n",
+      "Classifier: RandomForest, F1 (micro): 0.270, F1 (macro): 0.065, accuracy: 0.270\n",
+      "Dummy time -> f1 micro: 0.139, f1 macro: 0.001, accuracy: 0.139\n"
      ]
     }
    ],
@@ -273,7 +281,7 @@
     "        f1_macro = f1_score(y_test, y_pred, average='macro')\n",
     "        accu = accuracy_score(y_test, y_pred)\n",
     "        \n",
-    "        print(f\"Classifier: {clf_name:.3f}, F1 (micro): {f1_micro:.3f}, F1 (macro): {f1_macro:.3f}, accuracy: {accu:.3f}\")\n",
+    "        print(f\"Classifier: {clf_name}, F1 (micro): {f1_micro:.3f}, F1 (macro): {f1_macro:.3f}, accuracy: {accu:.3f}\")\n",
     "\n",
     "\n",
     "\n",
@@ -300,36 +308,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8178eecd-9e55-46fa-ae85-ebc26f042b5b",
+   "id": "2494efac-d1c0-44eb-9d8c-42dc755eec81",
    "metadata": {},
    "source": [
     "# Rapport\n",
     "\n",
-    "## Q2:\n",
-    "- La commande count() nous permet de connaître le nombre de tuple pour chaque feature. Nous avons 22546 enregistrements et 12\n",
-    "  colonnes (features).\n",
-    "- La fonction codée plus haut nous permet de connaître le nombre de valeurs manquantes. En voici la sortie:\n",
-    "  missing values\r\n",
-    "NAME-->6\r\n",
-    "DEPARTMENT_NAME-->6\r\n",
-    "TITLE-->6\r\n",
-    "REGULAR-->644\r\n",
-    "RETRO-->22150\r\n",
-    "OTHER-->8423\r\n",
-    "OVERTIME-->15706\r\n",
-    "INJURED-->21096\r\n",
-    "DETAIL-->20493\r\n",
-    "QUINN_EDUCATION_INCENTIVE-->21166\r\n",
-    "TOTA\n",
-    "POSTAL-->6\n",
-    "L_GROSS-->6\n",
-    "- Oui il y 6 tuples dont toutes les colonness\n",
-    "POSTAL-->6\n",
+    "## Q6\n",
+    "Selon doc scikit learn -> incompatible avec les classificateurs\n",
+    "Selon GTP -> oui \n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "\n"
+    "## Q7:\n",
+    "\n",
+    "1. \n",
+    "2. \n",
+    "3. \n",
+    "4. \n",
+    "5. "
    ]
   }
  ],
