--- a/pw3/pw3.ipynb
+++ b/pw3/pw3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "fba7dc16-489f-4a3e-9cec-ab1b054719f5",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "c15c68ac-1058-4078-9769-36ce96146bf9",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "da4df011-3f9f-4618-a9e2-0e651e942445",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "557d932b-bbce-4349-878b-bdab98b14f3f",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "b33adcf6-8d0a-4d06-b582-6fb4b8d85d21",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "6b2ef285-d03e-4d40-9046-91d46318c3b4",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "52a99c6a-dc56-4750-8c84-4a316069ce29",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "321df34f-f8c4-4c97-bc47-8fa98c5c3533",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "d0908574-9a38-42e8-aab5-d681b758b447",
    "metadata": {},
    "outputs": [],
@@ -189,17 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "abb05faf-7441-4ffe-a001-dbda6d3bcb3c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target.infos()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "id": "657992e4-639f-49b4-9b3f-73ac0c1e0363",
    "metadata": {},
    "outputs": [
@@ -209,20 +199,20 @@
      "text": [
       "Imputer: Zero\n",
       "Classifier: KNN         , F1 (micro): 0.231, F1 (macro): 0.050, accuracy: 0.231\n",
-      "Classifier: DecisionTree, F1 (micro): 0.258, F1 (macro): 0.062, accuracy: 0.258\n",
-      "Classifier: RandomForest, F1 (micro): 0.278, F1 (macro): 0.073, accuracy: 0.278\n",
+      "Classifier: DecisionTree, F1 (micro): 0.260, F1 (macro): 0.064, accuracy: 0.260\n",
+      "Classifier: RandomForest, F1 (micro): 0.284, F1 (macro): 0.075, accuracy: 0.284\n",
       "Imputer: Median\n",
       "Classifier: KNN         , F1 (micro): 0.234, F1 (macro): 0.051, accuracy: 0.234\n",
-      "Classifier: DecisionTree, F1 (micro): 0.263, F1 (macro): 0.066, accuracy: 0.263\n",
-      "Classifier: RandomForest, F1 (micro): 0.279, F1 (macro): 0.074, accuracy: 0.279\n",
+      "Classifier: DecisionTree, F1 (micro): 0.264, F1 (macro): 0.068, accuracy: 0.264\n",
+      "Classifier: RandomForest, F1 (micro): 0.282, F1 (macro): 0.073, accuracy: 0.282\n",
       "Imputer: KNN\n",
       "Classifier: KNN         , F1 (micro): 0.228, F1 (macro): 0.051, accuracy: 0.228\n",
-      "Classifier: DecisionTree, F1 (micro): 0.241, F1 (macro): 0.060, accuracy: 0.241\n",
-      "Classifier: RandomForest, F1 (micro): 0.267, F1 (macro): 0.064, accuracy: 0.267\n",
+      "Classifier: DecisionTree, F1 (micro): 0.235, F1 (macro): 0.056, accuracy: 0.235\n",
+      "Classifier: RandomForest, F1 (micro): 0.266, F1 (macro): 0.065, accuracy: 0.266\n",
       "Imputer: Iterative\n",
       "Classifier: KNN         , F1 (micro): 0.238, F1 (macro): 0.051, accuracy: 0.238\n",
-      "Classifier: DecisionTree, F1 (micro): 0.255, F1 (macro): 0.072, accuracy: 0.255\n",
-      "Classifier: RandomForest, F1 (micro): 0.270, F1 (macro): 0.065, accuracy: 0.270\n",
+      "Classifier: DecisionTree, F1 (micro): 0.254, F1 (macro): 0.072, accuracy: 0.254\n",
+      "Classifier: RandomForest, F1 (micro): 0.268, F1 (macro): 0.066, accuracy: 0.268\n",
       "Dummy time -> f1 micro: 0.139, f1 macro: 0.001, accuracy: 0.139\n"
      ]
     }
@@ -298,17 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "115c17e9-2931-487e-aee1-d8618e4abbfd",
-   "metadata": {},
-   "source": [
-    "Median + RandomForest = meilleure micro-moyenne\n",
-    "accuracy est similaire à la micro moyenne\n",
-    "    voir -> https://stackoverflow.com/questions/62792001/precision-and-recall-are-the-same-within-a-model/62792607#comment126263935_62792607"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2494efac-d1c0-44eb-9d8c-42dc755eec81",
+   "id": "ff30f541-d76b-4605-a929-bab1da1fa84c",
    "metadata": {},
    "source": [
     "# Rapport\n",
@@ -318,15 +298,23 @@
     "Selon GTP -> oui \n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "## Q7:\n",
     "\n",
-    "1. \n",
-    "2. \n",
-    "3. \n",
-    "4. \n",
-    "5. "
+    "- b) Si on attribue à tous les items la classe majoritaire, alors le F1-score sera simplement égal à 0 pour toutes les classes minoritaires, car il n'y aura aucun vrai positif (TP), et donc le rappel (recall) et la précision (precision) seront tous deux nuls pour ces classes.\n",
+    "\n",
+    "    Cependant, pour la classe majoritaire, le F1-score sera déterminé par la précision et le rappel pour cette classe. Comme toutes les prédictions seront corrects pour la classe majoritaire, la précision sera égale à 1 et le rappel sera également égal à 1.\n",
+    "\n",
+    "    Ainsi, le F1-score pour toutes les classes sera égal à 1 dans ce scénario où toutes les observations sont attribuées à la classe majoritaire.\n",
+    "\n",
+    "- c) Dans notre cas la combinaison qui a la meilleure combinaison semble être celle avec le classificateur random forest avec la méthode d'imputation avec la médiane ou zéro.\n",
+    "\n",
+    "- d) Les scores F1 avec micro-moyenne sont souvent plus élevés que ceux calculés avec une macro-moyenne, car la micro-moyenne pondère chaque classe en fonction de sa taille. Cela signifie que les classes plus fréquentes auront un impact plus important sur le score F1 avec micro-moyenne, tandis que la macro-moyenne traite chaque classe de manière égale. Il est a noté que la micro moyenne correspond souvent à l'accuracy comme nous l'avons appris en classe.\n",
+    "  Voir: https://stackoverflow.com/questions/62792001/precision-and-recall-are-the-same-within-a-model/62792607#comment126263935_62792607 comme indiqué: \"in classification tasks where every test case is guaranteed to be assigned to exactly one class, computing a micro average is equivalent to computing the accuracy score\"\n",
+    "\n",
+    "- e) Les scores F1 observés dans nos résultat présentent une variation significative, allant de 0.139 (pour le dummy) à 0.284 (pour le random forest). Cette diversité de performances indique une sensibilité aux différentes méthodes d'imputation des valeurs manquantes et d'algorithmes de classification. Ces résultats suggèrent que certaines approches sont plus efficaces que d'autres pour résoudre notre tâche de classification.\n",
+    "\n",
+    "    Cependant, les scores F1 dans l'ensemble restent relativement faibes, ce qui pourrait indiquer que notre modèle ne parvient pas à prédire efficacement les données ou que la tâche de classification est assez difficile. En effet, nous avons un nombre de classes significativement grand (DEPARTMENT_NAME) ce qui pourrait expliquer la faible performance de généralisation du modèle.\n",
+    "    Le dummy classifier est utile dans la mesure où il nous permet d'établir une 'baseline' de performance et ainsi comaprer un autre classificateur."
    ]
   }
  ],
