--- a/pw4/PCD_Muhlemann_Ronquillo.ipynb
+++ b/pw4/PCD_Muhlemann_Ronquillo.ipynb
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -310,6 +310,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accu: 0.95 best K: 1\n"
+     ]
     }
    ],
    "source": [
@@ -319,22 +326,88 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn import metrics\n",
     "hist = []\n",
+    "best_accu=0\n",
+    "nk=0\n",
     "for k in range(1, 50):\n",
     "    knn = KNeighborsClassifier(n_neighbors=k)\n",
     "    knn.fit(X_train, y_train)\n",
-    "    \n",
     "    y_pred = knn.predict(X_test)\n",
-    "    \n",
     "    accu = metrics.accuracy_score(y_test, y_pred)\n",
     "    hist.append(accu)\n",
-    "    #print(f\"Accu: {accu:.2f}\")\n",
-    "\n",
+    "    if accu > best_accu:\n",
+    "        best_accu = accu\n",
+    "        nk=k\n",
     "plt.plot(range(1, 50), hist, marker='o') \n",
     "plt.xlabel('Valeurs de k') \n",
     "plt.ylabel('Accuracy')\n",
     "plt.title('Evolution de l\\'accuracy en fonction de k')\n",
     "plt.grid(True)\n",
-    "plt.show() "
+    "plt.show()\n",
+    "print(f\"Accu: {best_accu:.2f} best K: {nk}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accu: 0.94\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Julien\\miniconda3\\envs\\PCD\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn import metrics\n",
+    "\n",
+    "logreg = LogisticRegression(random_state=42)\n",
+    "logreg.fit(X_train, y_train)\n",
+    "y_pred = logreg.predict(X_test)\n",
+    "\n",
+    "accu = metrics.accuracy_score(y_test, y_pred)\n",
+    "print(f\"Accu: {accu:.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accu: 0.94\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import svm\n",
+    "from sklearn import metrics\n",
+    "\n",
+    "clf = svm.SVC(C=10.0, kernel='linear')\n",
+    "clf.fit(X_train, y_train)\n",
+    "y_pred = clf.predict(X_test)\n",
+    "metrics.accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "print(f\"Accu: {accu:.2f}\")\n"
    ]
   },
   {
