--- a/presentation/plot_f_test_vs_mi.ipynb
+++ b/presentation/plot_f_test_vs_mi.ipynb
@@ -21,6 +21,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Comparaison entre le test F et l'information mutuelle\n",
+    "La comparaison entre le test F et l'information mutuelle concerne deux méthodes statistiques utilisées pour évaluer la relation et l'importance des variables, surtout dans les contextes de modélisation prédictive comme le machine learning. Voici un aperçu de chaque méthode suivi de quelques exemples pour illustrer leur utilisation :\n",
+    "\n",
+    "## Test F\n",
+    "Le test F est utilisé principalement pour tester l'égalité des variances entre deux populations ou pour tester l'importance de certains groupes de variables dans les modèles de régression linéaire. Dans le cadre de la sélection de caractéristiques, le test F mesure à quel point chaque caractéristique explique la variance dans la variable dépendante dans un modèle linéaire.\n",
+    "\n",
+    "## Exemple :\n",
+    "Imaginons que nous avons un ensemble de données sur les ventes immobilières. Les caractéristiques comprennent la superficie du bien, le nombre de chambres, et l'âge du bien. Si nous appliquons un test F pour évaluer l'importance de chaque caractéristique pour prédire le prix de vente, le test F évaluerait la contribution de chaque caractéristique à la variance totale du prix expliquée par le modèle linéaire global.\n",
+    "\n",
+    "## Information Mutuelle\n",
+    "L'information mutuelle (IM) mesure la quantité d'information que l'on obtient sur une variable en connaissant une autre variable ; autrement dit, elle mesure à quel point la connaissance d'une variable réduit l'incertitude sur une autre. Contrairement au test F, l'information mutuelle n'est pas limitée aux relations linéaires et peut capturer des relations complexes et non linéaires entre les caractéristiques.\n",
+    "\n",
+    "## Exemple :\n",
+    "Prenons un ensemble de données sur l'utilisation des applications mobiles, avec des caractéristiques comme le temps passé sur chaque application et l'âge des utilisateurs. L'information mutuelle pourrait être utilisée pour déterminer quelle application fournit le plus d'information sur l'âge de l'utilisateur. Si les jeunes utilisateurs passent plus de temps sur certaines applications tandis que les utilisateurs plus âgés en privilégient d'autres, l'information mutuelle entre le temps passé sur ces applications et l'âge sera élevée.\n",
+    "\n",
+    "## Comparaison\n",
+    "* Linéarité vs Non-linéarité : Le test F est efficace pour détecter les relations linéaires, mais il peut ne pas détecter les relations non linéaires importantes. L'information mutuelle, en revanche, peut détecter toute relation, qu'elle soit linéaire ou non linéaire.  \n",
+    "\n",
+    "* Hypothèses statistiques : Le test F repose sur certaines hypothèses comme la normalité des résidus dans un modèle de régression, tandis que l'information mutuelle ne repose pas sur de telles hypothèses et est donc plus flexible.  \n",
+    "\n",
+    "* Utilisation dans la sélection de caractéristiques : Dans les scénarios où les relations entre les caractéristiques et la cible sont potentiellement complexes et non linéaires, l'information mutuelle pourrait être préférable pour sélectionner des caractéristiques. Le test F serait plus approprié si l'on s'attend à des relations majoritairement linéaires.  \n",
+    "\n",
+    "## En conclusion\n",
+    "Le choix entre le test F et l'information mutuelle dépendra largement de la nature des données et des relations spécifiques que l'on cherche à modéliser ou comprendre dans l'ensemble de données."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "# Comparison of F-test and mutual information\n",
     "\n",
@@ -317,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
