--- a/presentation/plot_f_test_vs_mi.ipynb
+++ b/presentation/plot_f_test_vs_mi.ipynb
@@ -263,6 +263,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "F1 Scores:\n",
+      "             Feature  F1-score\n",
+      "0  sepal length (cm)  0.706667\n",
+      "1   sepal width (cm)  0.493333\n",
+      "2  petal length (cm)  0.933333\n",
+      "3   petal width (cm)  0.940000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calucler les F1-scores pour chaque caractéristique individuellement\n",
+    "\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import make_scorer, f1_score\n",
+    "from sklearn.feature_selection import SelectKBest, f_classif, mutual_info_classif\n",
+    "\n",
+    "# Charger vos données ici\n",
+    "# X, y, feature_names\n",
+    "\n",
+    "# Définition du classifieur\n",
+    "clf = RandomForestClassifier(n_estimators=100, random_state=0)\n",
+    "\n",
+    "# Définition de la métrique\n",
+    "f1_scorer = make_scorer(f1_score, average='micro')\n",
+    "\n",
+    "# Calcul du f1_score pour chaque caractéristique individuellement\n",
+    "f1_scores = []\n",
+    "for i in range(X.shape[1]):\n",
+    "    score = cross_val_score(clf, X[:, i:i+1], y, cv=5, scoring=f1_scorer)\n",
+    "    f1_scores.append(score.mean())  # Prendre la moyenne des scores de validation croisée\n",
+    "\n",
+    "# Création du DataFrame pour les F1-scores\n",
+    "f1_scores_df = pd.DataFrame({'Feature': feature_names, 'F1-score': f1_scores})\n",
+    "print(\"\\nF1 Scores:\")\n",
+    "print(f1_scores_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 Score for \"Petal Width (cm)\": 0.9400000000000001\n",
+      "F1 Score for \"Petal Width (cm)\" and \"Petal Length (cm)\": 0.9666666666666668\n",
+      "F1 Score for \"Petal Width (cm)\", \"Petal Length (cm)\" and \"Sepal Length (cm)\": 0.9533333333333334\n",
+      "F1 Score for \"Petal Width (cm)\", \"Petal Length (cm)\" and \"Sepal Width (cm)\": 0.9600000000000002\n",
+      "F1 Score for all features: 0.9533333333333334\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import make_scorer, f1_score\n",
+    "\n",
+    "# Charger le dataset Iris\n",
+    "data = load_iris()\n",
+    "X = data.data\n",
+    "y = data.target\n",
+    "feature_names = data.feature_names\n",
+    "\n",
+    "# Localiser les indices pour les caractéristiques pertinentes\n",
+    "feature1 = feature_names.index('petal width (cm)')\n",
+    "feature2 = feature_names.index('petal length (cm)')\n",
+    "feature3 = feature_names.index('sepal length (cm)')\n",
+    "feature4 = feature_names.index('sepal width (cm)')\n",
+    "\n",
+    "# Définir le modèle de RandomForest et le scorer F1\n",
+    "clf = RandomForestClassifier(n_estimators=100, random_state=0)\n",
+    "f1_scorer = make_scorer(f1_score, average='micro')\n",
+    "\n",
+    "# Function to calculate and print F1 scores\n",
+    "def calculate_f1(features, description):\n",
+    "    X_selected = X[:, features]\n",
+    "    f1_score_mean = cross_val_score(clf, X_selected, y, cv=5, scoring=f1_scorer).mean()\n",
+    "    print(f\"{description}: {f1_score_mean}\")\n",
+    "\n",
+    "# Calcul et affichage des scores F1 pour différentes combinaisons de caractéristiques\n",
+    "calculate_f1([feature1], 'F1 Score for \"Petal Width (cm)\"')\n",
+    "calculate_f1([feature1, feature2], 'F1 Score for \"Petal Width (cm)\" and \"Petal Length (cm)\"')\n",
+    "calculate_f1([feature1, feature2, feature3], 'F1 Score for \"Petal Width (cm)\", \"Petal Length (cm)\" and \"Sepal Length (cm)\"')\n",
+    "calculate_f1([feature1, feature2, feature4], 'F1 Score for \"Petal Width (cm)\", \"Petal Length (cm)\" and \"Sepal Width (cm)\"')\n",
+    "calculate_f1([feature1, feature2, feature3, feature4], 'F1 Score for all features')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 71,
    "metadata": {},
    "outputs": [
