--- a/pw6/pw6.ipynb
+++ b/pw6/pw6.ipynb
@@ -149,9 +149,14 @@
     "from sklearn.metrics import classification_report\n",
     "\n",
     "\n",
-    "pipeline = Pipeline([\n",
+    "pipeline1 = Pipeline([\n",
     "    ('vect', TfidfVectorizer()),\n",
     "    ('clf', ComplementNB())\n",
+    "])\n",
+    "\n",
+    "pipeline2 = Pipeline([\n",
+    "    ('vect', TfidfVectorizer()),\n",
+    "    ('tfid', TfidfTransformer())\n",
     "])\n"
    ]
   },
@@ -609,21 +614,18 @@
    ],
    "source": [
     "parameter_grid = {\n",
-    "    'vect__max_df': [0.2, 0.5],\n",
-    "    'vect__min_df': [1, 2],\n",
+    "    'vect__max_df': [0.5],\n",
+    "    'vect__min_df': [1, 2, 3],\n",
     "    'vect__ngram_range': [(1, 1), (1, 2)],\n",
-    "    'clf__alpha': [0.01, 0.1]\n",
+    "    'clf__alpha': [0.1]\n",
     "}\n",
-    "\n",
     "# parameter_grid = {\n",
     "#     'vect__max_df': [0.2, 0.5, 0.8],  # Valeurs possibles pour la fréquence maximale des documents\n",
     "#     'vect__min_df': [1, 2, 3],  # Valeurs possibles pour la fréquence minimale des documents\n",
     "#     'vect__ngram_range': [(1, 1), (1, 2)],  # Valeurs possibles pour les n-grammes (unigrammes et bigrammes)\n",
     "#     'clf__alpha': [0.01, 0.1, 1, 10]  # Valeurs possibles pour le paramètre de lissage du classifieur Naive Bayes\n",
     "# }\n",
-    "\n",
     "scorer = make_scorer(f1_score, pos_label=1)\n",
-    "\n",
     "grid_search = GridSearchCV(pipeline, parameter_grid, scoring='f1', cv=5, n_jobs=-1, verbose=1)\n",
     "grid_search.fit(df['text'], df['category'])\n"
    ]
@@ -652,7 +654,7 @@
    "source": [
     "best_params = grid_search.best_params_\n",
     "best_score = grid_search.best_score_\n",
-    "\n",
+    "# attention à fitter un modèle sur le test set pour obtenir le f1 score final !\n",
     "result_df = pd.DataFrame.from_dict(best_params, orient='index', columns=['Valeur'])\n",
     "result_df.index.name = 'Hyperparamètre'\n",
     "\n",
