add classif report

--- a/pw6/pw6.ipynb
+++ b/pw6/pw6.ipynb
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 95,
    "id": "dc5abb2e-b5ba-46c7-bcc1-86d32824dd03",
    "metadata": {},
    "outputs": [
@@ -675,14 +675,12 @@
       "vect__ngram_range  (1, 1)\n",
       "vect__norm             l2\n",
       "vect__use_idf        True\n",
-      "f1 score -> 0.052\n",
       "Hyper param pour 2 pipeline->                     Valeur\n",
       "clf__alpha            0.01\n",
       "clf__penalty            l1\n",
       "tfidf__max_df          0.2\n",
       "tfidf__ngram_range  (1, 1)\n",
       "tfidf__use_idf        True\n",
-      "f1 score -> 0.000\n",
       "Hyper param pour 3 pipeline->                    Valeur\n",
       "clf__alpha         0.0001\n",
       "clf__max_iter        2000\n",
@@ -690,18 +688,73 @@
       "tfidf__use_idf       True\n",
       "vect__max_df          0.5\n",
       "vect__ngram_range  (1, 1)\n",
-      "f1 score -> 0.918\n",
       "Hyper param pour 4 pipeline->                    Valeur\n",
       "clf__alpha          0.001\n",
       "tfidf__norm            l2\n",
       "tfidf__use_idf       True\n",
       "vect__max_df          0.5\n",
       "vect__ngram_range  (1, 2)\n",
-      "f1 score -> 0.770\n"
+      "Classification Report for Pipeline 1:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.95      1.00      0.98      2870\n",
+      "           1       1.00      0.03      0.05       149\n",
+      "\n",
+      "    accuracy                           0.95      3019\n",
+      "   macro avg       0.98      0.51      0.51      3019\n",
+      "weighted avg       0.95      0.95      0.93      3019\n",
+      "\n",
+      "\n",
+      "Classification Report for Pipeline 2:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.95      1.00      0.97      2870\n",
+      "           1       0.00      0.00      0.00       149\n",
+      "\n",
+      "    accuracy                           0.95      3019\n",
+      "   macro avg       0.48      0.50      0.49      3019\n",
+      "weighted avg       0.90      0.95      0.93      3019\n",
+      "\n",
+      "\n",
+      "Classification Report for Pipeline 3:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      1.00      1.00      2870\n",
+      "           1       0.98      0.87      0.92       149\n",
+      "\n",
+      "    accuracy                           0.99      3019\n",
+      "   macro avg       0.99      0.93      0.96      3019\n",
+      "weighted avg       0.99      0.99      0.99      3019\n",
+      "\n",
+      "\n",
+      "Classification Report for Pipeline 4:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      0.98      0.99      2870\n",
+      "           1       0.69      0.87      0.77       149\n",
+      "\n",
+      "    accuracy                           0.97      3019\n",
+      "   macro avg       0.84      0.92      0.88      3019\n",
+      "weighted avg       0.98      0.97      0.98      3019\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Julien\\miniconda3\\envs\\PCD\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "C:\\Users\\Julien\\miniconda3\\envs\\PCD\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "C:\\Users\\Julien\\miniconda3\\envs\\PCD\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
      ]
     }
    ],
    "source": [
+    "from sklearn.metrics import f1_score, classification_report\n",
     "\n",
     "# attention à fitter un modèle sur le test set pour obtenir le f1 score final !\n",
     "# extraire les best_hyperparameters\n",
@@ -716,22 +769,22 @@
     "pred4 = grid_search4.predict(test_texts_df['text'])\n",
     "\n",
     "# afficher les scores avec les paramètres\n",
-    "test_f1_score1 = f1_score(test_labels_df, pred1, pos_label=1)\n",
     "print(f\"Hyper param pour 1 pipeline-> {result1_df}\")\n",
-    "print(f\"f1 score -> {test_f1_score1:.3f}\")\n",
-    "\n",
-    "test_f1_score2 = f1_score(test_labels_df, pred2, pos_label=1)\n",
     "print(f\"Hyper param pour 2 pipeline-> {result2_df}\")\n",
-    "print(f\"f1 score -> {test_f1_score2:.3f}\")\n",
-    "\n",
-    "test_f1_score3 = f1_score(test_labels_df, pred3, pos_label=1)\n",
     "print(f\"Hyper param pour 3 pipeline-> {result3_df}\")\n",
-    "print(f\"f1 score -> {test_f1_score3:.3f}\")\n",
-    "\n",
-    "test_f1_score4 = f1_score(test_labels_df, pred4, pos_label=1)\n",
     "print(f\"Hyper param pour 4 pipeline-> {result4_df}\")\n",
-    "print(f\"f1 score -> {test_f1_score4:.3f}\")\n",
-    "###\n"
+    "###\n",
+    "\n",
+    "report1 = classification_report(test_labels_df, pred1)\n",
+    "report2 = classification_report(test_labels_df, pred2)\n",
+    "report3 = classification_report(test_labels_df, pred3)\n",
+    "report4 = classification_report(test_labels_df, pred4)\n",
+    "\n",
+    "# afficher les rapports de perf\n",
+    "print(f\"Classification Report for Pipeline 1:\\n{report1}\\n\")\n",
+    "print(f\"Classification Report for Pipeline 2:\\n{report2}\\n\")\n",
+    "print(f\"Classification Report for Pipeline 3:\\n{report3}\\n\")\n",
+    "print(f\"Classification Report for Pipeline 4:\\n{report4}\\n\")\n"
    ]
   },
   {
