--- a/pw6/pw6.ipynb
+++ b/pw6/pw6.ipynb
@@ -1,21 +1,32 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "26953df4-b71d-4395-929f-aec87b656d5b",
+   "cell_type": "markdown",
+   "id": "8e5fa6ba-c42e-4edc-be50-708eece9bfe4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "training files :  7769\n",
-      "testing files :  3019\n",
-      "total files :  10788\n"
-     ]
-    }
-   ],
+   "source": [
+    "# Labo6 PCD\n",
+    "## Optimisation de Modèles de Classification pour la Classe grain et non-grain\n",
+    "\n",
+    "## Introduction\n",
+    "\n",
+    "Dans ce rapport, nous présentons une approche pour optimiser les hyperparamètres de deux modèles de classification, `ComplementNB` et `SGDClassifier`, en utilisant GridSearchCV. La métrique principale utilisée pour l'évaluation est le score F1 de la classe 'grain'. Nous comparons également différentes configurations de `CountVectorizer` et `TfidfTransformer`.\n",
+    "\n",
+    "## Préparation des Données\n",
+    "\n",
+    "Nous avons chargé les données d'entraînement et de test dans les variables: \n",
+    "* train_texts_df\n",
+    "* train_labels_df\n",
+    "*  test_texts_df\n",
+    "*  test_labels_df."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5862688e-e0e4-403e-a624-961c9c6d2c2e",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import nltk\n",
     "#nltk.download('reuters')\n",
@@ -102,6 +113,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a8ccfd79-f18a-4f8c-830d-5f65669e712f",
+   "metadata": {},
+   "source": [
+    "## Création de pipelines de traitement\n",
+    "Nous avons créé 4 pipelines, chacun intégrant CountVectorizer et TfidfTransformer ou la fonction intégrant les deux en une: TfidfVectorizer. Ainsi que le classifieur correspondant (ComplementNB ou SGDClassifier)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 80,
    "id": "fb5204c8-6d3a-45e5-b57d-b8a98354631a",
@@ -146,6 +166,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f5d59495-01af-4e9c-8527-7485d2ade700",
+   "metadata": {},
+   "source": [
+    "TODO: expliquer le choix des paramètres"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 96,
    "id": "5f94e729-97a0-442f-bd64-126fe0b499b2",
@@ -184,6 +212,15 @@
     "    'tfidf__norm': ['l1', 'l2'],\n",
     "    'clf__alpha': [0.001, 0.001]\n",
     "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "683fef9c-103d-478d-b788-d63c65681e0f",
+   "metadata": {},
+   "source": [
+    "## Recherche des meilleurs paramèrtes\n",
+    "Nous avons défini des grilles de recherche pour explorer divers hyperparamètres pour chaque pipeline."
    ]
   },
   {
@@ -643,7 +680,7 @@
    ],
    "source": [
     "#essayer avec moins de folds\n",
-    "grid_search1 = GridSearchCV(pipeline1, parameter_grid1, scoring='f1', cv=2, n_jobs=-1, verbose=1)\n",
+    "grid_search1 = GridSearchCV(pipeline1, parameter_grid1, scoring='f1', cv=5, n_jobs=-1, verbose=1)\n",
     "grid_search1.fit(train_texts_df['text'], train_labels_df['category'])\n"
    ]
   },
@@ -1104,7 +1141,7 @@
    ],
    "source": [
     "\n",
-    "grid_search2 = GridSearchCV(pipeline2, parameter_grid2, scoring='f1', cv=2, n_jobs=-1, verbose=1)\n",
+    "grid_search2 = GridSearchCV(pipeline2, parameter_grid2, scoring='f1', cv=5, n_jobs=-1, verbose=1)\n",
     "grid_search2.fit(train_texts_df['text'], train_labels_df['category'])\n"
    ]
   },
@@ -1116,7 +1153,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "grid_search3 = GridSearchCV(pipeline3, parameter_grid3, scoring='f1', cv=2, n_jobs=-1, verbose=1)\n",
+    "grid_search3 = GridSearchCV(pipeline3, parameter_grid3, scoring='f1', cv=5, n_jobs=-1, verbose=1)\n",
     "grid_search3.fit(train_texts_df['text'], train_labels_df['category'])\n"
    ]
   },
@@ -1587,104 +1624,24 @@
    ],
    "source": [
     "\n",
-    "grid_search4 = GridSearchCV(pipeline4, parameter_grid4, scoring='f1', cv=2, n_jobs=-1, verbose=1)\n",
+    "grid_search4 = GridSearchCV(pipeline4, parameter_grid4, scoring='f1', cv=5, n_jobs=-1, verbose=1)\n",
     "grid_search4.fit(train_texts_df['text'], train_labels_df['category'])\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 99,
-   "id": "dc5abb2e-b5ba-46c7-bcc1-86d32824dd03",
+   "cell_type": "markdown",
+   "id": "22d7d886-18c5-4d13-adab-fb099867c268",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hyper param pour 1 pipeline->                    Valeur\n",
-      "clf__alpha           10.0\n",
-      "vect__max_df          0.2\n",
-      "vect__ngram_range  (1, 1)\n",
-      "vect__norm             l2\n",
-      "vect__use_idf        True\n",
-      "Hyper param pour 2 pipeline->                     Valeur\n",
-      "clf__alpha            0.01\n",
-      "clf__penalty            l1\n",
-      "tfidf__max_df          0.2\n",
-      "tfidf__ngram_range  (1, 1)\n",
-      "tfidf__use_idf        True\n",
-      "Hyper param pour 3 pipeline->                    Valeur\n",
-      "clf__alpha         0.0001\n",
-      "clf__max_iter        2000\n",
-      "tfidf__norm            l2\n",
-      "tfidf__use_idf       True\n",
-      "vect__max_df          0.5\n",
-      "vect__ngram_range  (1, 1)\n",
-      "Hyper param pour 4 pipeline->                    Valeur\n",
-      "clf__alpha          0.001\n",
-      "tfidf__norm            l2\n",
-      "tfidf__use_idf       True\n",
-      "vect__max_df          0.5\n",
-      "vect__ngram_range  (1, 2)\n",
-      "Classification Report for Pipeline 1:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.95      1.00      0.98      2870\n",
-      "           1       1.00      0.05      0.10       149\n",
-      "\n",
-      "    accuracy                           0.95      3019\n",
-      "   macro avg       0.98      0.53      0.54      3019\n",
-      "weighted avg       0.96      0.95      0.93      3019\n",
-      "\n",
-      "\n",
-      "Classification Report for Pipeline 2:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.95      1.00      0.97      2870\n",
-      "           1       0.00      0.00      0.00       149\n",
-      "\n",
-      "    accuracy                           0.95      3019\n",
-      "   macro avg       0.48      0.50      0.49      3019\n",
-      "weighted avg       0.90      0.95      0.93      3019\n",
-      "\n",
-      "\n",
-      "Classification Report for Pipeline 3:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.99      1.00      1.00      2870\n",
-      "           1       0.98      0.87      0.92       149\n",
-      "\n",
-      "    accuracy                           0.99      3019\n",
-      "   macro avg       0.99      0.93      0.96      3019\n",
-      "weighted avg       0.99      0.99      0.99      3019\n",
-      "\n",
-      "\n",
-      "Classification Report for Pipeline 4:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.99      0.98      0.99      2870\n",
-      "           1       0.69      0.87      0.77       149\n",
-      "\n",
-      "    accuracy                           0.97      3019\n",
-      "   macro avg       0.84      0.92      0.88      3019\n",
-      "weighted avg       0.98      0.97      0.98      3019\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Julien\\miniconda3\\envs\\PCD\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "C:\\Users\\Julien\\miniconda3\\envs\\PCD\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "C:\\Users\\Julien\\miniconda3\\envs\\PCD\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
-     ]
-    }
-   ],
+   "source": [
+    "## Visualisation des résultas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5ea0673-9518-4a02-9812-af0feead5376",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from sklearn.metrics import f1_score, classification_report\n",
     "\n",
@@ -1720,11 +1677,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "accc75ee-3247-4811-a775-f4542540b2ee",
+   "cell_type": "markdown",
+   "id": "412db1ce-02c7-4fa3-80ed-1c7b4fcb5bd0",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Extraction des meilleurs hyperparamètres et visualisation des rapports de performances\n",
+    "\n",
+    "TODO commenter les résultats et écrire conclusion\n",
+    "\n",
+    "* eventuellement faire du stemming ou lematize \n",
+    "\n",
+    "Les prochaines étapes pourraient inclure l'exploration d'autres modèles de classification, l'augmentation des données ou l'utilisation de techniques de pré-traitement de texte plus avancées pour améliorer encore les performances."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c751a754-88b8-4906-9cda-ed955bbe0240",
+   "metadata": {},
    "source": []
   }
  ],
